<resources>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="restriction_lock_title">Manage restriction lock</string>
    <string name="wifi_use_auto_ip">Enable Auto IP</string>
    <string name="wifi_use_auto_ip_summary">Use default IP settings if Auto configuration (DHCP) fails</string>
    <string name="wifi_use_static_ip_summary">Manually configure IP settings</string>
    <string name="wifi_setting_adhoc_channel_number_title">Peer to peer (Ad-hoc) channel</string>
    <string name="ring_modes_title">Ringer &amp; vibrate modes</string>
    <string name="ring_modes_summary">Set profile of ringer switch</string>
    <string name="notification_led_enable_title">Notification LED</string>
    <string name="notification_led_enable_summary_on">Blink LED to notify me</string>
    <string name="wallpaper_settings">Wallpaper settings</string>
    <string name="wallpaper_settings_summary">"Set the phone's background wallpaper"</string>
    <string name="media_audio_effect_title">Media audio effects</string>
    <string name="media_audio_effect_summary">Set audio effects for music and videos</string>
    <string name="play_media_notification_sounds_enable_title">SD card notifications</string>
    <string name="play_media_notification_sounds_enable_summary_on">Play sound for SD card notifications</string>
    <string name="play_media_notification_sounds_enable_summary_off">Play sound for SD card notifications</string>
    <string name="software_update_alert_title">Software update alert</string>
    <string name="software_update_alert_summary">Play alert tone for software update notifications</string>
    <string name="enhanced_roaming_banner_enable_title">Roaming banner</string>
    <string name="enhanced_roaming_banner_enable_summary">Show notification text informing which system the wireless device is using</string>
    <string name="system_version">System version</string>
    <string name="eri_version">ERI version</string>
    <string name="prl_version">PRL version</string>
    <string name="location_privacy_policy_setting_title">Location setting</string>
    <string name="location_privacy_policy_setting_summary">Enable GPS</string>
    <string name="call_connect_tone_enable_title">Call connect</string>
    <string name="call_connect_tone_enable_summary">Set sound emitted when call is connected</string>
    <string name="network_lost_tone_enable_title">Network Lost tone</string>
    <string name="enhanced_roaming_tone_enable_title">Roaming tone</string>
    <string name="enhanced_roaming_tone_enable_summary">Set notification tone informing the status of cellular service</string>
    <string name="location_section_title">Location</string>
    <string name="compass_title">Compass</string>
    <string name="compass_calribrate">Calibrate Compass</string>
    <string name="compass_calribrate_summary">Calibrate the compass for optimum performance</string>
    <string name="in_pocket_detection_enable_title">In-Pocket detection</string>
    <string name="in_pocket_detection_enable_summary">Locks your device automatically when inserted in pocket</string>
    <string name="auto_system_check_title">Auto system check</string>
    <string name="auto_system_check_summary">Phone will check for system updates periodically</string>
    <string name="location_e911_summary">E911 location can not be turned off on any mobile cellular phone</string>
    <string name="full_charge_notification_title">Battery Full Notification</string>
    <string name="full_charge_notification_summary_on">Enable charging complete notification sounds (not applicable for USB charger)</string>
    <string name="full_charge_notification_summary_off">Disable charging complete notification sounds (not applicable for USB charger)</string>
    <string name="location_e911">E911 only</string>
    <string name="assisted_gps_summary">Use Location Services Provided by Verizon Wireless</string>
    <string name="webtop_version">Webtop version</string>
    <string name="broadcast_settings_title">Cell broadcast</string>
    <string name="broadcast_settings_summary">Enable cell broadcast application</string>
    <string name="device_info_default">Unknown</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_visibility">Discoverable</string>
    <string name="bluetooth_is_discoverable">Discoverable for %1$s seconds…</string>
    <string name="bluetooth_not_discoverable">Make device discoverable</string>
    <string name="bluetooth_devices">Bluetooth devices</string>
    <string name="bluetooth_device_name">Device name</string>
    <string name="bluetooth_name_not_set">No name set, using account name</string>
    <string name="airplane_mode">Airplane mode</string>
    <string name="airplane_mode_summary">Disable all wireless connections</string>
    <string name="bluetooth_quick_toggle_title">Bluetooth</string>
    <string name="bluetooth_quick_toggle_summary">Turn on Bluetooth</string>
    <string name="bluetooth_settings">Bluetooth settings</string>
    <string name="bluetooth_settings_title">Bluetooth settings</string>
    <string name="bluetooth_settings_summary">Manage connections, set device name &amp; discoverability</string>
    <string name="bluetooth_preference_scan_title">Scan for devices</string>
    <string name="nfc_quick_toggle_title">NFC</string>
    <string name="nfc_quick_toggle_summary">Use Near Field Communication to read and exchange tags</string>
    <string name="wifi_quick_toggle_title">WLAN</string>
    <string name="wifi_quick_toggle_summary">Turn on WLAN</string>
    <string name="wifi_settings">WLAN settings</string>
    <string name="wifi_settings_summary">Set up &amp; manage wireless access points</string>
    <string name="wifi_ip_address">IP address</string>
    <string name="wifi_advanced_titlebar">Advanced</string>
    <string name="wifi_setting_num_channels_title">Regulatory domain</string>
    <string name="wifi_setting_num_channels_summary">Set the number of channels to use</string>
    <string name="wifi_setting_sleep_policy_title">WLAN sleep policy</string>
    <string name="wifi_setting_sleep_policy_summary">Specify when to switch from WLAN to mobile data</string>
    <string name="wifi_advanced_mac_address_title">MAC address</string>
    <string name="wifi_ip_settings_titlebar">IP settings</string>
    <string name="wifi_use_static_ip">Use static IP</string>
    <string name="wifi_dns1">DNS 1</string>
    <string name="wifi_dns2">DNS 2</string>
    <string name="wifi_gateway">Gateway</string>
    <string name="wifi_netmask">Netmask</string>
    <string name="sound_settings">Sound settings</string>
    <string name="silent_mode_title">Silent mode</string>
    <string name="silent_mode_summary">Silence all sounds except media &amp; alarms</string>
    <string name="ringtone_title">Phone ringtone</string>
    <string name="ringtone_summary" />
    <string name="all_volume_title">Volume</string>
    <string name="ring_volume_summary" />
    <string name="vibrate_title">Vibrate</string>
    <string name="vibrate_summary">Vibration feedback for calls and notifications</string>
    <string name="notification_sound_title">Notification ringtone</string>
    <string name="notification_sound_summary" />
    <string name="notification_sound_dialog_title">Select notification ringtone</string>
    <string name="dtmf_tone_enable_title">Audible touch tones</string>
    <string name="dtmf_tone_enable_summary_on">Play tones when using dial pad</string>
    <string name="dtmf_tone_enable_summary_off">Play tones when using dial pad</string>
    <string name="sound_effects_enable_title">Audible selection</string>
    <string name="sound_effects_enable_summary_on">Play sound when making screen selection</string>
    <string name="sound_effects_enable_summary_off">Play sound when making screen selection</string>
    <string name="lock_sounds_enable_title">Screen lock sounds</string>
    <string name="lock_sounds_enable_summary_on">Play sounds when locking and unlocking the screen</string>
    <string name="lock_sounds_enable_summary_off">Play sounds when locking and unlocking the screen</string>
    <string name="haptic_feedback_enable_title">Haptic feedback</string>
    <string name="haptic_feedback_enable_summary_on">Vibrate when pressing soft keys and on certain UI interactions</string>
    <string name="haptic_feedback_enable_summary_off">Vibrate when pressing soft keys and on certain UI interactions</string>
    <string name="display_settings">Display settings</string>
    <string name="animations_title">Animation</string>
    <string name="accelerometer_title">Auto-rotate screen</string>
    <string name="brightness">Brightness</string>
    <string name="screen_timeout">Screen timeout</string>
    <string name="screen_timeout_summary">Adjust the delay before the screen automatically turns off</string>
    <string name="system_update_settings_list_item_title">System updates</string>
    <string name="system_update_settings_list_item_summary" />
    <string name="firmware_version">Android version</string>
    <string name="model_number">Model number</string>
    <string name="baseband_version">Baseband version</string>
    <string name="kernel_version">Kernel version</string>
    <string name="build_number">Build number</string>
    <string name="device_status">Status</string>
    <string name="device_status_summary">Phone number, signal, etc.</string>
    <string name="tether_settings_title_both">Tethering &amp; Mobile Hotspot</string>
    <string name="tether_settings_summary_both">"Share your phone's mobile data connection via USB or as a Mobile Hotspot"</string>
    <string name="network_settings_title">Mobile networks</string>
    <string name="network_settings_summary">Set options for roaming, networks, APNs</string>
    <string name="location_title">My Location</string>
    <string name="location_network_based">Use wireless networks</string>
    <string name="location_networks_disabled">See location in applications (such as Maps) using wireless networks</string>
    <string name="location_neighborhood_level">Location determined by WLAN and/or mobile networks</string>
    <string name="location_gps">Use GPS satellites</string>
    <string name="location_street_level">When locating, accurate to street level</string>
    <string name="location_gps_disabled">Locate to street-level (requires more battery plus view of sky)</string>
    <string name="assisted_gps">VZW location services</string>
    <string name="about_settings">About phone</string>
    <string name="legal_information">Legal information</string>
    <string name="copyright_title">Copyright</string>
    <string name="license_title">License</string>
    <string name="terms_title">Terms and conditions</string>
    <string name="settings_safetylegal_title">Safety information</string>
    <string name="vpn_settings_title">VPN settings</string>
    <string name="vpn_settings_summary">Set up &amp; manage Virtual Private Networks (VPNs)</string>
    <string name="emergency_tone_title">Emergency tone</string>
    <string name="emergency_tone_summary">Set behavior when an emergency call is placed</string>
    <string name="sound_category_sound_title">General</string>
    <string name="sound_category_calls_title">Incoming calls</string>
    <string name="sound_category_notification_title">Notifications</string>
    <string name="sound_category_feedback_title">Feedback</string>
    <string name="wimax_settings">4G settings</string>
    <string name="wimax_settings_summary">Set up &amp; manage 4G network and modem</string>
    <string name="additional_system_update_settings_list_item_title">Additional system updates</string>
    <string name="title_font_size">Font size</string>
    <string name="summary_font_size">Overall size of fonts</string>
    <string name="dialog_title_font_size">Select font size</string>
</resources>