<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/location_title" android:key="location_category">
        <Preference android:title="@string/location_e911" android:key="location_e911" android:summary="@string/location_e911_summary" />
        <CheckBoxPreference android:title="@string/location_network_based" android:key="location_network" android:summaryOn="@string/location_neighborhood_level" android:summaryOff="@string/location_networks_disabled" />
        <CheckBoxPreference android:title="@string/location_gps" android:key="location_gps" android:summaryOn="@string/location_street_level" android:summaryOff="@string/location_gps_disabled" />
        <CheckBoxPreference android:title="@string/assisted_gps" android:key="location_agps" android:summary="@string/assisted_gps_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/compass_title" android:key="compass_category">
        <Preference android:title="@string/compass_calribrate" android:key="compass_calribrate" android:summary="@string/compass_calribrate_summary">
            <intent android:targetPackage="com.motorola.CompassCalibrate" android:action="android.intent.action.MAIN" android:targetClass="com.motorola.CompassCalibrate.CompassCalibrate" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
