<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/display_settings"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    <com.android.settings.BrightnessPreference android:title="@string/brightness" android:key="brightness" android:dialogTitle="@string/brightness" />
    <ListPreference android:entries="@array/entries_font_size" android:title="@string/title_font_size" android:key="font_size" android:summary="@string/summary_font_size" android:dialogTitle="@string/dialog_title_font_size" android:entryValues="@array/entryvalues_font_size" />
    <CheckBoxPreference android:title="@string/accelerometer_title" android:key="accelerometer" />
    <ListPreference android:persistent="false" android:entries="@array/animations_entries" android:title="@string/animations_title" android:key="animations" android:entryValues="@array/animations_values" />
    <ListPreference android:persistent="false" android:entries="@array/screen_timeout_entries" android:title="@string/screen_timeout" android:key="screen_timeout" android:summary="@string/screen_timeout_summary" android:entryValues="@array/screen_timeout_values" />
    <PreferenceScreen android:title="@string/wallpaper_settings" android:key="wallpaper" android:summary="@string/wallpaper_settings_summary" />
    <CheckBoxPreference android:persistent="false" android:title="@string/notification_led_enable_title" android:key="notification_led_checkbox" android:summary="@string/notification_led_enable_summary_on" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/enhanced_roaming_banner_enable_title" android:key="eri_text_banner" android:summary="@string/enhanced_roaming_banner_enable_summary" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/in_pocket_detection_enable_title" android:key="in_pocket_detection" android:summary="@string/in_pocket_detection_enable_summary" android:defaultValue="true" />
</PreferenceScreen>
