<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/wifi_advanced_titlebar"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:persistent="false" android:title="@string/wifi_setting_num_channels_title" android:key="num_channels" android:summary="@string/wifi_setting_num_channels_summary" />
    <ListPreference android:persistent="false" android:title="@string/wifi_setting_adhoc_channel_number_title" android:key="adhoc_channel_number" />
    <ListPreference android:persistent="false" android:entries="@array/wifi_sleep_policy_entries" android:title="@string/wifi_setting_sleep_policy_title" android:key="sleep_policy" android:summary="@string/wifi_setting_sleep_policy_summary" android:entryValues="@array/wifi_sleep_policy_values" />
    <Preference android:title="@string/wifi_advanced_mac_address_title" android:key="mac_address" style="?android:attr/preferenceInformationStyle" />
    <PreferenceCategory android:title="@string/wifi_ip_settings_titlebar" />
    <CheckBoxPreference android:persistent="false" android:title="@string/wifi_use_auto_ip" android:key="use_auto_ip" android:summary="@string/wifi_use_auto_ip_summary" />
    <CheckBoxPreference android:persistent="false" android:title="@string/wifi_use_static_ip" android:key="use_static_ip" android:summary="@string/wifi_use_static_ip_summary" />
    <EditTextPreference android:persistent="false" android:singleLine="true" android:title="@string/wifi_ip_address" android:key="ip_address" android:dependency="use_static_ip" />
    <EditTextPreference android:persistent="false" android:singleLine="true" android:title="@string/wifi_gateway" android:key="gateway" android:dependency="use_static_ip" />
    <EditTextPreference android:persistent="false" android:singleLine="true" android:title="@string/wifi_netmask" android:key="netmask" android:dependency="use_static_ip" />
    <EditTextPreference android:persistent="false" android:singleLine="true" android:title="@string/wifi_dns1" android:key="dns1" android:dependency="use_static_ip" />
    <EditTextPreference android:persistent="false" android:singleLine="true" android:title="@string/wifi_dns2" android:key="dns2" android:dependency="use_static_ip" />
</PreferenceScreen>
