<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/about_settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:title="@string/system_update_settings_list_item_title" android:key="system_update_settings" android:summary="@string/system_update_settings_list_item_summary">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.deviceinfo.CheckUpdate" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/additional_system_update_settings_list_item_title" android:key="additional_system_update_settings">
        <intent android:targetPackage="@string/additional_system_update" android:action="android.intent.action.MAIN" android:targetClass="@string/additional_system_update_menu" />
    </PreferenceScreen>
    <CheckBoxPreference android:title="@string/auto_system_check_title" android:key="auto_system_check" android:summary="@string/auto_system_check_summary" android:defaultValue="false" />
    <PreferenceScreen android:title="@string/device_status" android:key="status_info" android:summary="@string/device_status_summary">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.deviceinfo.Status" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/legal_information" android:key="container">
        <PreferenceScreen android:title="@string/copyright_title" android:key="copyright">
            <intent android:action="android.settings.COPYRIGHT" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/license_title" android:key="availablelicenses">
            <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.AvailableLicensesActivity" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/terms_title" android:key="terms">
            <intent android:action="android.settings.TERMS" />
        </PreferenceScreen>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/settings_safetylegal_title" android:key="safetylegal">
        <intent android:action="android.settings.SAFETY" />
    </PreferenceScreen>
    <Preference android:title="@string/system_version" android:key="system_version" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
    <Preference android:title="@string/model_number" android:key="device_model" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
    <Preference android:title="@string/firmware_version" android:key="firmware_version" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
    <Preference android:title="@string/baseband_version" android:key="baseband_version" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
    <Preference android:title="@string/webtop_version" android:key="webtop_version" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
    <Preference android:title="@string/kernel_version" android:key="kernel_version" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
    <Preference android:title="@string/build_number" android:key="build_number" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
    <Preference android:title="@string/eri_version" android:key="eri_version" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
    <Preference android:title="@string/prl_version" android:key="prl_version" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
</PreferenceScreen>
