<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/bluetooth_settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/bluetooth" android:key="bt_checkbox" android:summary="@string/bluetooth_quick_toggle_summary" />
    <com.android.settings.bluetooth.BluetoothNamePreference android:persistent="false" android:singleLine="true" android:title="@string/bluetooth_device_name" android:key="bt_name" android:summary="@string/bluetooth_name_not_set" android:dependency="bt_checkbox" android:dialogTitle="@string/bluetooth_device_name" />
    <CheckBoxPreference android:persistent="false" android:title="@string/bluetooth_visibility" android:key="bt_discoverable" android:dependency="bt_checkbox" android:summaryOn="@string/bluetooth_is_discoverable" android:summaryOff="@string/bluetooth_not_discoverable" />
    <Preference android:title="@string/bluetooth_preference_scan_title" android:key="bt_scan" android:dependency="bt_checkbox" />
    <com.android.settings.ProgressCategory android:title="@string/bluetooth_devices" android:orderingFromXml="false" android:key="bt_device_list" android:dependency="bt_checkbox" />
</PreferenceScreen>
